--- a/SEP21/Areas/QuanLy/Views/DangKyHoatDongs/Index2.cshtml
+++ b/SEP21/Areas/QuanLy/Views/DangKyHoatDongs/Index2.cshtml
@@ -38,7 +38,7 @@
                                         </td>
                                         <td>@item.ThoiGianDangKy.ToShortDateString()</td>
                                         <td>@item.BaiViet.TieuDe</td>
-                                        <td>@item.SinhVien.HoTen</td>
+                                        <td>@item.MSSV</td>
                                     </tr>
                             }
                         </tbody>
