--- a/SEP21/Views/Home/Index.cshtml
+++ b/SEP21/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                     <h1>Chào mừng đến với Khoa Công nghệ thông tin</h1>
                     <h2>Đạo đức - ý chí - sáng tạo</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
-                        <a href="https://www.youtube.com/watch?v=mveofh0MZDQ" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+                        <a href="https://www.youtube.com/watch?v=7cmvABXyUC0" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
@@ -54,7 +54,7 @@
                                             <div class="card-body">
                                                 <div class="small text-muted">@item.LoaiBaiViet1.TenLoaiBaiViet</div>
                                                 <h2 class="card-title h4">@item.TieuDe</h2>
-                                                <p class="small text-muted">@item.NgayDangBai</p>
+                                                <p class="small text-muted">@item.NgayDangBai.ToShortDateString()</p>
                                             </div>
                                         </div>
                                     </div>
