--- a/SEP21/Areas/QuanLy/Views/BaiViets/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Create.cshtml
@@ -65,7 +65,7 @@
             <div class="col-md-10">
                 <input class="form-control" type="file" name="Picture" id="IMG" onchange="readPicture(this)" accept="image/gif,image/jpeg,image/png" />
             </div>
-            <img id="Picture" />
+            <img id="Picture" width="200px" height="200px"/>
         </div>
         <div class="form-group">
             @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
