--- a/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Create.cshtml
@@ -40,7 +40,7 @@
             <div class="col-md-10">
                 <input class="form-control" type="file" name="Picture" id="IMG" onchange="readPicture(this)" accept="image/gif,image/jpeg,image/png" />
             </div>
-            <img id="Picture" />
+            <img id="Picture" width="200px" height="200px"/>
         </div>
 
         <div class="form-group">
